Add new files and modify existing ones

--- a/src/main/resources/templates/detailEvent.html
+++ b/src/main/resources/templates/detailEvent.html
@@ -44,7 +44,7 @@
         </tr>
         <tr>
             <td><b>Booking for Event</b></td>
-            <td th:text="${eventBooking.getEventName()}"></td>
+            <td th:text="${eventBooking.event.name}"></td>
         </tr>
         <tr>
             <td><b>Number of tickets</b></td>
